[gd_scene load_steps=7 format=3 uid="uid://bdewcnqtkfwsf"]

[ext_resource type="Script" path="res://Scenes/UIScenes/TowerUpgrade.gd" id="1_i67xv"]
[ext_resource type="Texture2D" uid="uid://cmmovymas2l05" path="res://Assets/UI/Menu/red_cross.png" id="2_8tvn2"]
[ext_resource type="Texture2D" uid="uid://c612sokwt7s14" path="res://Assets/UI/Menu/Background.png" id="2_x1div"]
[ext_resource type="FontFile" uid="uid://cmvhle8a2rai2" path="res://Assets/Fonts/Kenney Future Narrow.ttf" id="3_sf6ww"]
[ext_resource type="Texture2D" uid="uid://dmwjf4qpksp1s" path="res://Assets/UI/Menu/Button_small.png" id="4_tnhtu"]
[ext_resource type="Texture2D" uid="uid://bied8mce1on2u" path="res://Assets/UI/Menu/Button_pressed_small.png" id="5_h4hvi"]

[node name="TowerUpgrade" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 60.0
offset_right = -1664.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i67xv")

[node name="BG" type="TextureRect" parent="."]
custom_minimum_size = Vector2(256, 1020)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -1020.0
offset_right = 256.0
grow_vertical = 0
texture = ExtResource("2_x1div")
expand_mode = 1

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -510.0
offset_right = 290.0
offset_bottom = 510.0
grow_vertical = 2
scale = Vector2(0.88, 1)
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBC-Labels" type="VBoxContainer" parent="Margin"]
layout_mode = 2
size_flags_vertical = 0

[node name="TowerName" type="Label" parent="Margin/VBC-Labels"]
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("3_sf6ww")
theme_override_font_sizes/font_size = 20
text = "NAME"

[node name="Damage" type="Label" parent="Margin/VBC-Labels"]
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("3_sf6ww")
theme_override_font_sizes/font_size = 20
text = "Damage"

[node name="RateOfFire" type="Label" parent="Margin/VBC-Labels"]
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("3_sf6ww")
theme_override_font_sizes/font_size = 20
text = "FIRERATE"

[node name="Range" type="Label" parent="Margin/VBC-Labels"]
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("3_sf6ww")
theme_override_font_sizes/font_size = 20
text = "Range"

[node name="VBC-Buttons" type="VBoxContainer" parent="Margin"]
layout_mode = 2
size_flags_vertical = 8

[node name="UpgradeButton" type="TextureButton" parent="Margin/VBC-Buttons"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_tnhtu")
texture_pressed = ExtResource("5_h4hvi")

[node name="UpgradeLabel" type="Label" parent="Margin/VBC-Buttons/UpgradeButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.5
offset_top = -13.0
offset_right = 49.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("3_sf6ww")
theme_override_font_sizes/font_size = 20
text = "UPGRADE"

[node name="Control" type="Control" parent="Margin/VBC-Buttons"]
custom_minimum_size = Vector2(0, 256)
layout_mode = 2

[node name="SellButton" type="TextureButton" parent="Margin/VBC-Buttons"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
texture_normal = ExtResource("4_tnhtu")
texture_pressed = ExtResource("5_h4hvi")

[node name="SellLabel" type="Label" parent="Margin/VBC-Buttons/SellButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.5
offset_top = -13.0
offset_right = 49.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("3_sf6ww")
theme_override_font_sizes/font_size = 20
text = "SELL"
horizontal_alignment = 1

[node name="DIV2" type="Control" parent="Margin/VBC-Buttons"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="Close" type="TextureButton" parent="Margin/VBC-Buttons"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_8tvn2")
stretch_mode = 0

[node name="DIV" type="Control" parent="Margin/VBC-Buttons"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[connection signal="pressed" from="Margin/VBC-Buttons/UpgradeButton" to="." method="_on_upgrade_button_pressed"]
[connection signal="pressed" from="Margin/VBC-Buttons/SellButton" to="." method="_on_sell_button_pressed"]
[connection signal="pressed" from="Margin/VBC-Buttons/Close" to="." method="_on_close_pressed"]
